--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# set-option -sa terminal-overrides ',xterm*:Tc'
+set-option -sa terminal-overrides ',xterm*:Tc'
 set -g mouse on
 
 bind -n M-H previous-window
@@ -16,6 +16,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # set vi-mode
 set-window-option -g mode-keys vi
