--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -86,14 +86,14 @@ semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 [shell]
 program = "/bin/zsh"
 
-[window]
-decorations = "full"
-dynamic_title = true
-startup_mode = "Maximized"
+# [window]
+# decorations = "full"
+# dynamic_title = true
+# startup_mode = "Maximized"
 
-[window.dimensions]
-columns = 160
-lines = 80
+# [window.dimensions]
+# columns = 160
+# lines = 80
 
 [window.padding]
 x = 4
