--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,9 +17,12 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # set vi-mode
 set-window-option -g mode-keys vi
+
+set -g @continuum-restore 'on'
 
 # keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
